--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,5 +1,6 @@
 #cards {
     margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .nocard {
@@ -8,16 +9,16 @@
 }
 
 .line-public {
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     height: 6px;
     background-color: green;
     left: 0;
-    bottom: 176px;
+    bottom: 26.1vh;
 }
 
 .line-prive {
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     height: 6px;
     background-color: darkcyan;
@@ -26,7 +27,7 @@
 }
 
 .line-conseil {
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     height: 6px;
     background-color: orange;
