--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -12,7 +12,7 @@
     /* position: absolute; */
     width: 100%;
     height: 6px;
-    background-color: green;
+    background-color: #035913;
     left: 0;
     bottom: 26.1vh;
 }
@@ -37,4 +37,13 @@
 
 .card-body {
     text-align: left;
+}
+
+.cardButton {
+    background-color: #035913 !important;
+    border: none !important;
+}
+
+.cardButton:hover {
+    background-color: darkcyan !important;
 }
