--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -38,3 +38,13 @@
 .card-body {
     text-align: left;
 }
+
+.text-mission {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        margin: 0 14vw 15px 14vw;
+        font-size: 16px;
+}
