--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -48,6 +48,7 @@
         margin-top: 10px;
         margin: 0 14vw 15px 14vw;
         font-size: 16px;
+}
 
 .cardButton {
     background-color: #035913 !important;
