--- a/src/components/Parallax.css
+++ b/src/components/Parallax.css
@@ -7,14 +7,23 @@
 
 #parallax-content h2 {
     color: darkcyan;
-    font-size: 55px;
+    font-weight: 700;
+    /*text-shadow: -1px 0 black, 0 0.5px darkgrey;*/
+    font-size: 60px;
 }
 
 #parallax-content p {
-    color: white;
+    color: black);
+    /*text-shadow: -1px 0 black, 0 1px black;*/
     font-size: 25px;
-    margin: 1vw 0vw 2vw 0vw;
+    margin: 1vw 0vw 1vw 0vw;
 }
+
+#cadre-parallax {
+    border-radius: 9px;
+    padding: 15px;
+    background-color: rgba(255, 255, 255, 0.5);
+} 
 
 .devis-button {
     
