--- a/src/components/Parallax.css
+++ b/src/components/Parallax.css
@@ -13,7 +13,7 @@
 }
 
 #parallax-content p {
-    color: black);
+    color: black;
     /*text-shadow: -1px 0 black, 0 1px black;*/
     font-size: 25px;
     margin: 1vw 0vw 1vw 0vw;
