--- a/src/components/Parallax.css
+++ b/src/components/Parallax.css
@@ -7,22 +7,29 @@
 
 #parallax-content h2 {
     color: darkcyan;
+    font-family: "Reem Kufi", sans-serif;
     font-weight: 700;
     /*text-shadow: -1px 0 black, 0 0.5px darkgrey;*/
     font-size: 60px;
+    margin-bottom: 0;
 }
 
 #parallax-content p {
-    color: black);
+    color: black;
     /*text-shadow: -1px 0 black, 0 1px black;*/
+    margin-top: 0 !important;
+    font-family: "Reem Kufi", sans-serif;
     font-size: 25px;
     margin: 1vw 0vw 1vw 0vw;
 }
 
 #cadre-parallax {
-    border-radius: 9px;
-    padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
     background-color: rgba(255, 255, 255, 0.5);
+    padding: 10px 40px 10px 40px;
 } 
 
 .devis-button {
