--- a/src/components/KeyFacts.css
+++ b/src/components/KeyFacts.css
@@ -1,5 +1,7 @@
 #key-facts {
     border-radius: 9px;
     padding: 15px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.6);
+    height: 300px;
+    width: 70%;
 } 
