--- a/src/pages/Public.css
+++ b/src/pages/Public.css
@@ -1,14 +1,12 @@
-.public {
-    margin-top: 76px;
+/* .public {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #f5f5f5;
-}
+} */
 
 .file-link {
-    background-color: green !important;
+    background-color: #035913 !important;
     color: white !important;
     width: 60vw;
     margin: 1vw;
@@ -19,25 +17,48 @@
     border-radius: 10px;
 }
 
-/*.title-public {
-    margin-top: 10px; 
+#public-head {
+    display: flex;
+    width: 100%;
+    height: 320px;
 }
 
-.text-public {
-    justify-content: center;
-    margin: 1vw;
-    padding: 10px 80px 1px 5px;
-    width: 75vw;
-}*/
-
-.public-head {
+#public-text {
+    width: 50%;
+    height: 100%;
+    background: white;
+    box-sizing: border-box;
+    padding: 30px 100px;
+    background-color: #035913;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#public-text h2 {
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: white
+}
+
+#public-text p {
     margin-top: 10px;
-    width: 60vw;
-    text-align: justify;
+    color: white;
+    font-size: 18px;
+}
+
+#image-box {
+    width: 50%;
+    height: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+#image-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .theme-row {
@@ -45,8 +66,27 @@
     padding-bottom: 15px !important;
 }
 
-.formation {
+#content {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 15px;
+}
+
+#aside {
+    width: 30%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+#formations {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+}
+
+.formations-card {
+    max-width: 1000px;
+    margin-bottom: 20px;
+    margin-top: 10px;
 }
