--- a/src/components/KeyFacts.css
+++ b/src/components/KeyFacts.css
@@ -1,7 +1,29 @@
 #key-facts {
     border-radius: 9px;
-    padding: 15px;
+    padding: 30px;
     background-color: rgba(255, 255, 255, 0.6);
-    height: 300px;
-    width: 70%;
+    height: 250px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 } 
+
+#chiffres {
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.fact {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.fact h5 {
+    font-size: 25px;
+    font-weight: bold;
+}
