--- a/src/components/Parallax.css
+++ b/src/components/Parallax.css
@@ -7,7 +7,7 @@
 
 #parallax-content h2 {
     color: darkcyan;
-    font-family: "Poppins", sans-serif;
+    font-family: "Questrial", sans-serif;
     font-weight: 700;
     /*text-shadow: -1px 0 black, 0 0.5px darkgrey;*/
     font-size: 60px;
