--- a/src/pages/Public.css
+++ b/src/pages/Public.css
@@ -79,7 +79,7 @@
     align-items: flex-start;
 }
 
-#formations {
+#formations-container {
     width: 70%;
     display: flex;
     flex-direction: column;
