--- a/src/pages/Prive.css
+++ b/src/pages/Prive.css
@@ -1,13 +1,13 @@
-.prive {
+/* .prive {
     margin-top: 76px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #f5f5f5;
-}
+} */
 
-.file-link {
+/* .file-link {
     background-color: green !important;
     color: white !important;
     width: 60vw;
@@ -17,14 +17,48 @@
     align-items: center;
     padding: 15px;
     border-radius: 10px;
+} */
+
+#prive-head {
+    display: flex;
+    width: 100%;
+    height: 320px;
 }
 
-.prive-head {
+#prive-text {
+    width: 50%;
+    height: 100%;
+    background: white;
+    box-sizing: border-box;
+    padding: 30px 100px;
+    background-color: darkcyan;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#prive-text h2 {
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: white
+}
+
+#prive-text p {
     margin-top: 10px;
-    width: 60vw;
-    text-align: justify;
+    color: white;
+    font-size: 18px;
+}
+
+#box {
+    width: 50%;
+    height: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+#box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
