--- a/src/components/About.css
+++ b/src/components/About.css
@@ -10,13 +10,13 @@
 }
 
 .selfie-wrapper {
-    height: 300px;
-    width: 300px;
+    height: 500px;
+    width: 500px;
     margin-top: 20px;
-    border: green 1px solid;
+    /*border: green 1px solid;
     border-radius: 50%;
     overflow: hidden;
-    box-shadow: 2px 5px 7px -1px grey;
+    box-shadow: 2px 5px 7px -1px grey;*/
     position: relative;
 }
 
@@ -35,13 +35,13 @@
 }
 
 .text-regis {
-    font-size: 17px;
-    margin-top: 40px;
+    font-size: 18px;
+    margin-top: 20px;
 }
 
 .text-steph {
-    font-size: 17px;
-    margin-top: 40px;    
+    font-size: 18px;
+    margin-top: 20px;    
 }
 
 .regis {
@@ -60,4 +60,14 @@
     justify-content: center;
     width: 100%;
     height: 100%;
+}
+
+.text-steph h4 {
+    color: #035913;
+    font-weight: bold;
+}
+
+.text-regis h4 {
+    color: #035913;
+    font-weight: bold;
 }
