--- a/src/components/About.css
+++ b/src/components/About.css
@@ -10,8 +10,8 @@
 }
 
 .selfie-wrapper {
-    height: 300px;
-    width: 300px;
+    height: 15vw;
+    width: 15vw;
     margin-top: 20px;
     border: green 1px solid;
     border-radius: 50%;
@@ -48,16 +48,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
+    padding: 20px;
 }
 
 .steph {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
+    padding: 20px;
 }
