--- a/src/components/KeyFacts.css
+++ b/src/components/KeyFacts.css
@@ -2,7 +2,7 @@
     border-radius: 9px;
     padding: 30px;
     background-color: rgba(255, 255, 255, 0.6);
-    height: 250px;
+    /* height: 250px; */
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -16,11 +16,12 @@
 }
 
 .fact {
-    width: 20%;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .fact h5 {
