--- a/src/pages/Public.css
+++ b/src/pages/Public.css
@@ -37,6 +37,37 @@
     text-align: justify;
 }
 
+#public-head-mobile {
+    width: 100%;
+}
+
+#public-text-mobile {
+    width: 100%;
+    height: 100%;
+    color: white;
+    box-sizing: border-box;
+    padding: 70px 4vw;
+    background-color: #035913;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+}
+
+#public-text-mobile h2 {
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: white;
+    text-align: center;
+}
+
+#public-text-mobile p {
+    margin-top: 10px;
+    color: white;
+    font-size: 18px;
+}
+
 #public-text h2 {
     font-weight: bold;
     margin-bottom: 10px;
@@ -69,6 +100,9 @@
 
 #content {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 #aside {
@@ -94,7 +128,20 @@
 
 #container {
     height: 450px;
-    margin: 0.5vw 0.5vw 35px 0.5vw;
+    width: 530px;
+    margin: 1vw 1vw 35px 1vw;
     background-color: white;
     padding: 10px;
+}
+
+@media screen and (max-width: 1400px) {
+    #public-head {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    #public-head-mobile {
+        display: none;
+    }
 }
