--- a/src/components/About.css
+++ b/src/components/About.css
@@ -41,9 +41,9 @@
 
 .text-steph {
     font-size: 18px;
-    margin-top: 20px;    
-}
-
+    margin-top: 20px;
+}    
+    
 .regis {
     display: flex;
     flex-direction: column;
@@ -61,6 +61,7 @@
     justify-content: flex-start;
     width: 100%;
     height: 100%;
+    padding: 20px;
 }
 
 .text-steph h4 {
@@ -72,3 +73,4 @@
     color: #035913;
     font-weight: bold;
 }
+
