--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -30,7 +30,7 @@
     /* position: absolute; */
     width: 100%;
     height: 6px;
-    background-color: orange;
+    background-color: #fd7e14;
     left: 0;
     bottom: 176px;
 }
@@ -54,13 +54,33 @@
         font-family: "Roboto", sans-serif;
 }
 
-.cardButton {
+.cardButton1 {
     color: #035913 !important;
     border-color: #035913 !important;
 }
 
-.cardButton:hover {
+.cardButton1:hover {
     background-color: #035913 !important;
+    color: white !important;
+}
+
+.cardButton2 {
+    color: darkcyan !important;
+    border-color: darkcyan !important;
+}
+
+.cardButton2:hover {
+    background-color: darkcyan !important;
+    color: white !important;
+}
+
+.cardButton3 {
+    color: #fd7e14 !important;
+    border-color: #fd7e14 !important;
+}
+
+.cardButton3:hover {
+    background-color: #fd7e14 !important;
     color: white !important;
 }
 
