--- a/src/components/Parallax.css
+++ b/src/components/Parallax.css
@@ -9,9 +9,9 @@
     color: darkcyan;
     font-family: "Questrial", sans-serif;
     font-weight: 700;
-    /*text-shadow: -1px 0 black, 0 0.5px darkgrey;*/
+    /*text-shadow: 1px 0 darkgrey, 0 0.5px darkgrey;*/
     font-size: 60px;
-    margin-bottom: 0;
+    margin-bottom: 1vw;
 }
 
 #parallax-content p {
@@ -19,7 +19,7 @@
     /*text-shadow: -1px 0 black, 0 1px black;*/
     margin-top: 0 !important;
     font-family: "Questrial", sans-serif;
-    font-size: 25px;
+    font-size: 27px;
     margin: 1vw 0vw 1vw 0vw;
 }
 
