--- a/src/pages/Prive.css
+++ b/src/pages/Prive.css
@@ -36,6 +36,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: justify;
 }
 
 #prive-text h2 {
@@ -61,4 +62,47 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+#prive-head-mobile {
+    width: 100%;
+}
+
+#prive-text-mobile {
+    width: 100%;
+    height: 100%;
+    color: white;
+    box-sizing: border-box;
+    padding: 70px 4vw;
+    background-color: darkcyan;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+}
+
+#prive-text-mobile h2 {
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: white;
+    text-align: center;
+}
+
+#prive-text-mobile p {
+    margin-top: 10px;
+    color: white;
+    font-size: 18px;
+}
+
+@media screen and (max-width: 1400px) {
+    #prive-head {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    #prive-head-mobile {
+        display: none;
+    }
 }
