--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,28 +1,25 @@
-.title-about {
-    font-family: "Questrial", sans-serif;
-    margin-top: 1vw;
+
+
+.left {
+    padding: 20px 0 50px 15vw;
 }
 
-.text-about {
-    margin: 0px 60px 0 60px;
-    justify-content: center;
-    text-align: justify;
-}
-
-.selfie-wrapper {
-    height: 500px;
-    width: 500px;
-    margin-top: 20px;
-    /*border: green 1px solid;
-    border-radius: 50%;
-    overflow: hidden;
-    box-shadow: 2px 5px 7px -1px grey;*/
-    position: relative;
+.right {
+    padding: 20px 15vw 50px 0;
 }
 
 .selfie-wrapper img {
     max-width: 100%;
     max-height: 100%;
+}
+
+.selfie-wrapper img:hover {
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: grayscale(100%);
+    filter: gray; /* IE 6-9 */;
 }
 
 .selfie-wrapper p {
@@ -51,7 +48,6 @@
     justify-content: flex-start;
     width: 100%;
     height: 100%;
-    padding: 20px;
 }
 
 .steph {
@@ -71,4 +67,33 @@
 .text-regis h4 {
     color: #035913;
     font-weight: bold;
+}
+
+.css-1jv1kel {
+    text-align: justify !important;
+}
+
+.css-692fgp {
+    background-color: darkcyan !important;
+}
+
+.hidden-part {
+    background-color: rgba(255, 255, 255, 0.5);
+    position: absolute;
+    left: 2vw;
+    right: 2vw;
+    bottom: 100px;
+    padding: 2vw;
+    border-radius: 5px;
+    visibility: hidden;
+}
+
+.selfie-wrapper div:hover .hidden-part {
+    visibility: visible;
+}
+
+.hidden-part p {
+    background: none;
+    font-size: 27px;
+    color: black;
 }
