--- a/src/components/KeyFacts.css
+++ b/src/components/KeyFacts.css
@@ -28,3 +28,9 @@
     font-size: 25px;
     font-weight: bold;
 }
+
+@media screen and (max-width: 1023px) {
+    #keyFacts-parallax {
+        display: none;
+    }
+}
