--- a/src/pages/Public.css
+++ b/src/pages/Public.css
@@ -132,6 +132,7 @@
     margin: 1vw 1vw 35px 1vw;
     background-color: white;
     padding: 10px;
+    border-radius: 5px;
 }
 
 @media screen and (max-width: 1400px) {
