--- a/src/components/About.css
+++ b/src/components/About.css
@@ -8,9 +8,13 @@
     padding: 20px 15vw 50px 0;
 }
 
+.selfie-wrapper {
+    
+}
+
 .selfie-wrapper img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .selfie-wrapper img:hover {
@@ -81,12 +85,16 @@
 .hidden-part {
     background-color: rgba(255, 255, 255, 0.5);
     position: absolute;
-    left: 2vw;
-    right: 2vw;
-    bottom: 100px;
+    left: 0vw;
+    right: 0vw;
+    bottom: 0vw;
+    height: 50%;
     padding: 2vw;
-    border-radius: 5px;
     visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .selfie-wrapper div:hover .hidden-part {
