--- a/src/components/ConseilModal.css
+++ b/src/components/ConseilModal.css
@@ -25,10 +25,11 @@
     background-color: #fd7e14;
     color: white;
     border-radius: 5px;
-    height: 32px;
+    min-height: 32px;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 3px;
 }
 
 .conseil-text {
