--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,78 +1,27 @@
 
 
 .left {
-    padding: 20px 0 50px 15vw;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .right {
-    padding: 20px 15vw 50px 0;
+    display: flex;
+    justify-content: flex-start;
 }
 
-.selfie-wrapper {
-    
-}
-
-.selfie-wrapper img {
+.avatar-wrapper img {
     width: 100%;
     height: 100%;
 }
 
-.selfie-wrapper img:hover {
+/* .avatar-wrapper img:hover {
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
     -o-filter: grayscale(100%);
     filter: grayscale(100%);
-    filter: gray; /* IE 6-9 */;
-}
-
-.selfie-wrapper p {
-    bottom: 0,5px;
-    width: 100%;
-    color: white;
-    background-color: green;
-    border-radius: 2px solid;
-    font-size: 20px;
-}
-
-.text-regis {
-    font-size: 18px;
-    margin-top: 20px;
-}
-
-.text-steph {
-    font-size: 18px;
-    margin-top: 20px;
-}    
-    
-.regis {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    height: 100%;
-}
-
-.steph {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-}
-
-.text-steph h4 {
-    color: #035913;
-    font-weight: bold;
-}
-
-.text-regis h4 {
-    color: #035913;
-    font-weight: bold;
-}
+    filter: gray; /* IE 6-9 */; */
 
 .css-1jv1kel {
     text-align: justify !important;
@@ -97,7 +46,7 @@
     align-items: center;
 }
 
-.selfie-wrapper div:hover .hidden-part {
+.avatar-wrapper:hover .hidden-part {
     visibility: visible;
 }
 
@@ -105,4 +54,13 @@
     background: none;
     font-size: 27px;
     color: black;
+}
+
+.half {
+    width: 100%;
+}
+
+.avatar-wrapper {
+    position: relative;
+    width: 70%;
 }
