--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -47,4 +47,8 @@ a:hover {
     position: relative;
 }
 
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;..");
+  }
+
   
