--- a/src/components/KeyFacts.css
+++ b/src/components/KeyFacts.css
@@ -29,8 +29,8 @@
     font-weight: bold;
 }
 
-@media screen and (max-width: 1023px) {
-    #keyFacts-parallax {
+@media screen and (max-width: 1050px) {
+    .parallax-keyFacts {
         display: none;
     }
 }
