--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -27,21 +27,60 @@
 }
 
 .contact-row {
-    max-width: 100%;
+    width: 100%;
+    margin: 0 !important;
 }
 
 .rightCol {
-    padding: 5.6vw 3vw 0vw 3vw;
-}
-
-.rightCol img {
-    width: 100%;
-}
-
-.rightCol .col {
-    padding: 0.3vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .text-contact {
     font-size: 20px;
+}
+
+.instructions {
+    height: 200px;
+    font-size: 20px;
+    margin-top:90px;
+}
+
+.contact-info {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+#contact-card {
+    width: 90%;
+    height: 650px;
+    background-color: white;
+    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 30px;
+    position: relative;
+
+}
+
+#contact-card h5 {
+    font-size: 28px;
+    font-family: 'Questrial';
+}
+
+#contact-card p {
+    font-size: 17px;
+}
+
+.contact-info {
+    display: flex;
+    justify-content: center;
+    height: 150px;
 }
