--- a/src/components/About.css
+++ b/src/components/About.css
@@ -29,7 +29,7 @@
     left: 0vw;
     right: 0vw;
     bottom: 0vw;
-    height: 50%;
+    height: 65%;
     padding: 2vw;
     visibility: hidden;
     display: flex;
@@ -40,6 +40,17 @@
 
 .avatar-wrapper:hover .hidden-part {
     visibility: visible;
+}
+
+.linked-in {
+    width: 60px;
+    height: 60px;
+    margin: 10px 0px;
+}
+
+.linked-in img {
+    width: 100%;
+    height: 100%;
 }
 
 .hidden-part p {
