--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -59,4 +59,15 @@ a:hover {
       color: black !important;
   }
 
+  #twitter-wrapper {
+      width: 40px;
+      height: 40px;
+      margin-left: 15px;
+  }
+
+  #twitter-wrapper img {
+      width: 100%;
+      height: 100%;
+  }
+
   
