--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -3,15 +3,26 @@
     background-color: #f5f5f5;
 }
 
+.modal-body {
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+
+
+
 #form-global {
     margin: 4vw;
     text-align: left;
+    position: relative;
 }
 
 .submit-button {
     background-color: #035913;
     border: 1px solid #035913;
     color: white;
+    width: 95px;
 }
 
 .submit-button:hover {
