--- a/src/pages/Conseil.css
+++ b/src/pages/Conseil.css
@@ -100,10 +100,11 @@
     font-size: 17px;
 }
 
-#container {
+.container {
     padding: 20px;
     position: relative !important;
     overflow: hidden;
+    box-shadow: 5px 5px 10px grey;
 }
 
 
